<resources>
    <string name="app_name">Recogida de Datos</string>
    <string name="nombrePersona">Azafata</string>
    <string name="nombreCentro">Centro</string>
    <string name="diaDeRecogida">Dia de Recogida de los datos</string>
    <string name="numeroBotellas">Numero de botellas consumidas</string>
    <string name="tipoZumo">Tipo de zumo consumido</string>
    <string name="contador">0</string>

    <string name="titulo1">Datos Generales</string>
    <string name="titulo2">Concepto</string>
    <string name="titulo3">Datos de Interés Zumos</string>
    <string name="titulo4">Centro / Acción</string>
    <string name="titulo5">Datos de Interés Veggies</string>

    <string name="pregunta1">¿Ha gustado el sabor del zumo?</string>
    <string name="pregunta2">¿Ha gustado el envase / formato del zumo?</string>
    <string name="pregunta3">¿El cliente aprecia la degustación?</string>
    <string name="pregunta4">¿El sabor resulta natural?</string>
    <string name="pregunta5">¿Ha gustado la mezcla de sabores?</string>
    <string name="pregunta6">¿La mezcla con zanahoria es la que menos gusta?</string>
    <string name="pregunta7">¿Los sabores resultan acidos?</string>
    <string name="pregunta8">¿El precio resulta elevado?</string>
    <string name="pregunta9">¿Aprecia que no tenga azucares añadidos?</string>
    <string name="pregunta10">¿El producto gustaria mas si estuviera refrigerado?</string>
    <string name="pregunta11">¿La verduras son mas predominantes en la mezcla de sabores?</string>

    <string name="preguntaV1">¿Ha gustado el sabor del zumo?</string>
    <string name="preguntaV2">¿Ha gustado el envase / formato del zumo?</string>
    <string name="preguntaV3">¿El cliente aprecia la degustación?</string>
    <string name="preguntaV4">¿El sabor resulta natural?</string>
    <string name="preguntaV5">¿Ha gustado la mezcla de sabores?</string>
    <string name="preguntaV6">¿Se aprecia que contengan verduras?</string>
    <string name="preguntaV7">¿Ha gustado el sabor del Veggie Rojo?</string>
    <string name="preguntaV8">¿Ha gustado el sabor del Veggie Verde?</string>
    <string name="preguntaV9">¿Ha gustado el sabor del Veggie Naranja?</string>
    <string name="preguntaV10">¿El precio resulta elevado?</string>
    <string name="preguntaV11">¿Se aprecia que no contenga azúcares añadidos?</string>

    <string name="preguntaSiNo1">¿Ha tenido facilidad por parte del centro para realizar la acción?</string>
    <string name="preguntaSiNo2">¿Te han facilitado los productos sin problema?</string>
    <string name="preguntaSiNo3">¿Te ha resultado facil colocar los elementos promocionales?</string>

    <string name="zumoClasico">Clasico</string>
    <string name="zumoAntioxidante">Antioxidante</string>
    <string name="zumoOrganico">Organico</string>
    <string name="zumoPrisma">Prisma</string>
    <string name="zumoVeggies">Veggies</string>
    <string name="otrosZumos">Otros zumos</string>

    <string name="opcionMucho">Mucho</string>
    <string name="opcionPoco">Poco</string>
    <string name="opcionNada">Nada</string>
    <string name="radiobtnSi">SI</string>
    <string name="radiobtnNo">NO</string>

    <string name="btnIniciar">Comenzar</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnFinalizar">Salir</string>
    <string name="btnAñadir">+</string>
    <string name="btnQuitar">-</string>
</resources>
