<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecogidaDatosGenerales"
    android:background="@drawable/textura">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo1"
            android:id="@+id/textView"
            style="@style/LetrasTitulo"
            android:editable="false"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/nombrePersona"
                android:ems="9"
                android:id="@+id/editText"
                style="@style/LetrasOtros"
                android:editable="false" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="40dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/nombreCentro"
                android:ems="9"
                android:id="@+id/editText2"
                style="@style/LetrasOtros"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diaDeRecogida"
                android:id="@+id/editText3"
                android:inputType="date"
                style="@style/LetrasOtros"/>
        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            style="@style/LetrasSubtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preguntaSiNo1"
            android:id="@+id/textView3" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <RadioButton
                style="@style/LetrasOtros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobtnSi"
                android:id="@+id/radioButton"
                android:paddingEnd="35dp" />

            <RadioButton
                style="@style/LetrasOtros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobtnNo"
                android:id="@+id/radioButton2"
                android:paddingEnd="35dp" />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            style="@style/LetrasSubtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preguntaSiNo2"
            android:id="@+id/textView23" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <RadioButton
                style="@style/LetrasOtros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobtnSi"
                android:id="@+id/radioButton3"
                android:paddingEnd="35dp" />

            <RadioButton
                style="@style/LetrasOtros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobtnNo"
                android:id="@+id/radioButton4"
                android:paddingEnd="35dp" />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            style="@style/LetrasSubtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preguntaSiNo3"
            android:id="@+id/textView24" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <RadioButton
                style="@style/LetrasOtros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobtnSi"
                android:id="@+id/radioButton5"
                android:paddingEnd="35dp" />

            <RadioButton
                style="@style/LetrasOtros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobtnNo"
                android:id="@+id/radioButton6"
                android:paddingEnd="35dp" />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSiguiente"
        android:id="@+id/continuar1"
        android:background="@drawable/btn_accion"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_alignBottom="@+id/linearLayout2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
