<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecogidaDatosSiNo"
    android:background="@drawable/textura">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout3"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo4"
            android:id="@+id/textView8"
            android:textSize="25sp"
            style="@style/Letras"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preguntaSiNo1"
            android:id="@+id/textView18"
            style="@style/Letras"
            android:textStyle="italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobtnSi"
                android:id="@+id/rbSI1"
                android:paddingEnd="35dp"
                android:textSize="12sp"
                style="@style/Letras"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobtnNo"
                android:id="@+id/rbNO1"
                android:paddingEnd="35dp"
                android:textSize="12sp"
                style="@style/Letras"/>

        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preguntaSiNo2"
            android:id="@+id/textView19"
            style="@style/Letras"
            android:textStyle="italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobtnSi"
                android:id="@+id/rbSI2"
                android:paddingEnd="35dp"
                android:textSize="12sp"
                style="@style/Letras"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobtnNo"
                android:id="@+id/rbNO2"
                android:paddingEnd="35dp"
                android:textSize="12sp"
                style="@style/Letras"/>

        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preguntaSiNo3"
            android:id="@+id/textView20"
            style="@style/Letras"
            android:textStyle="italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobtnSi"
                android:id="@+id/rbSI3"
                android:paddingEnd="35dp"
                android:textSize="12sp"
                style="@style/Letras"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobtnNo"
                android:id="@+id/rbNO3"
                android:paddingEnd="35dp"
                android:textSize="12sp"
                style="@style/Letras"/>

        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            style="@style/Letras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo2"
            android:id="@+id/textView22"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            style="@style/Letras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="@string/numeroBotellas"
            android:ems="10"
            android:id="@+id/editText5"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSiguiente"
        android:id="@+id/continuar5"
        android:background="@drawable/botones_accion"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:layout_gravity="center|bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>